--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   "dependencies": {
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/graphql": "^7.10.6",
     "@nestjs/platform-express": "^7.6.15",
+    "apollo-server-express": "^2.23.0",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
